# rigol-rof-reader

./: .gitignore  Main.hs  Makefile  README.md  example.ROF  plot.R  rigol.cabal  rigolrof.cabal  stack.yaml
