name:                rigol
version:             0.1.0.0
synopsis:            Parse rigol rof files
description:         Please see README.md
homepage:            https://github.com/githubuser/rigol#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable readrof
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base
                     , binary
                     , bytestring
  default-language:    Haskell2010
