name:                rigolrof
version:             0.1.0.0
synopsis:            Parse rigol ROF files
description:         Please see README.md
homepage:            https://github.com/mcmayer/rigol-rof-reader
license:             BSD3
license-file:        LICENSE
author:              Markus Mayer
maintainer:          info@mayer.net
copyright:           2016 Markus Mayer
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable readrof
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base
                     , binary
                     , bytestring
  default-language:    Haskell2010
